--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
       - restore_cache:
           name: Restore dependencies
           keys:
-            - gopkg-v1-{{ .Branch }}-{{ checksum "Gopkg.lock" }}
-            - gopkg-v1-{{ .Branch }}
-            - gopkg-v1-master
-            - gopkg-v1
+            - vendor-v1-{{ .Branch }}-{{ checksum "go.sum" }}
+            - vendor-v1-{{ .Branch }}
+            - vendor-v1-master
+            - vendor-v1
 
       - run:
           name: Install dependencies
@@ -59,14 +59,14 @@ jobs:
 
       - save_cache:
           name: Save dependencies
-          key: gopkg-v1-{{ .Branch }}-{{ checksum "Gopkg.lock" }}
+          key: vendor-v1-{{ .Branch }}-{{ checksum "go.sum" }}
           paths:
             - vendor/
 
       - restore_cache:
           name: Restore license cache
           keys:
-            - licensei-v1-{{ .Branch }}-{{ checksum "Gopkg.lock" }}
+            - licensei-v1-{{ .Branch }}-{{ checksum "go.sum" }}
             - licensei-v1-{{ .Branch }}
             - licensei-v1-master
             - licensei-v1
@@ -77,7 +77,7 @@ jobs:
 
       - save_cache:
           name: Save license cache
-          key: licensei-v1-{{ .Branch }}-{{ checksum "Gopkg.lock" }}
+          key: licensei-v1-{{ .Branch }}-{{ checksum "go.sum" }}
           paths:
             - .licensei.cache
 
