ingress gateway component

--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -64,6 +64,14 @@ spec:
               type: array
             affinity:
               type: object
+            istioControlPlane:
+              description: Istio CR to which this gateway belongs to
+              properties:
+                name:
+                  type: string
+                namespace:
+                  type: string
+              type: object
             labels:
               type: object
             loadBalancerIP:
