Enable continuous analysis of Istio resources

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -38,6 +38,8 @@ spec:
     additionalEnvVars:
       - name: PILOT_ENABLE_STATUS
         value: "true"
+      - name: PILOT_ENABLE_ANALYSIS
+        value: "true"
   gateways:
     enabled: true
     ingress:
