--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,7 +13,7 @@ WORKDIR /go/src/${PACKAGE}
 COPY pkg/    pkg/
 COPY cmd/    cmd/
 COPY vendor/ vendor/
-COPY Makefile Gopkg.* /go/src/${PACKAGE}/
+COPY Makefile go.* /go/src/${PACKAGE}/
 
 # Build
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager github.com/banzaicloud/istio-operator/cmd/manager
