--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -155,6 +155,14 @@ spec:
             includeIPRanges:
               description: IncludeIPRanges the range where to capture egress traffic
               type: string
+            istioControlPlane:
+              description: Istio CR to which this gateway belongs to
+              properties:
+                name:
+                  type: string
+                namespace:
+                  type: string
+              type: object
             proxy:
               description: Proxy configuration options
               properties:
