rename revision handling funcs

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -1357,6 +1357,8 @@ spec:
               description: Use the Mesh Control Protocol (MCP) for configuring Mixer
                 and Pilot. Requires an MCP source.
               type: boolean
+            useRevision:
+              type: boolean
             version:
               description: Contains the intended Istio version
               pattern: ^1.6
