--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -30,6 +30,9 @@ spec:
   - JSONPath: .metadata.creationTimestamp
     name: Age
     type: date
+  - JSONPath: .spec.istioControlPlane
+    name: ControlPlane
+    type: string
   group: istio.banzaicloud.io
   names:
     kind: MeshGateway
