Add MeshGateway kind
kubebuilder create api --group istio --version v1beta1 --kind MeshGateway

--- a/new/config/rbac/role.yaml
+++ b/new/config/rbac/role.yaml
@@ -26,3 +26,23 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - meshgateways
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - meshgateways/status
+  verbs:
+  - get
+  - patch
+  - update
