Add RemoteIstio kind
kubebuilder create api --group istio --version v1beta1 --kind RemoteIstio

--- a/new/config/rbac/role.yaml
+++ b/new/config/rbac/role.yaml
@@ -46,3 +46,23 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - remoteistios
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - remoteistios/status
+  verbs:
+  - get
+  - patch
+  - update
