--- a/new/config/crd/kustomization.yaml
+++ b/new/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/istio.banzaicloud.io_istios.yaml
 - bases/istio.banzaicloud.io_meshgateways.yaml
+- bases/istio.banzaicloud.io_remoteistios.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_istios.yaml
 #- patches/webhook_in_meshgateways.yaml
+#- patches/webhook_in_remoteistios.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_istios.yaml
 #- patches/cainjection_in_meshgateways.yaml
+#- patches/cainjection_in_remoteistios.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
