--- a/config/samples/istio_v1beta1_istio_meshexpansion.yaml
+++ b/config/samples/istio_v1beta1_istio_meshexpansion.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.6.8"
+  version: "1.7.0-beta.1"
   autoInjectionNamespaces:
   - "default"
   useMCP: false
@@ -14,5 +14,5 @@ spec:
   meshExpansion: true
   controlPlaneSecurityEnabled: true
   proxy:
-    image: "docker.io/istio/proxyv2:1.6.8"
+    image: "docker.io/istio/proxyv2:1.7.0-beta.1"
   jwtPolicy: "first-party-jwt"
