--- a/docs/federation/gateway/samples/istio-multicluster-cr.yaml
+++ b/docs/federation/gateway/samples/istio-multicluster-cr.yaml
@@ -3,7 +3,7 @@ kind: Istio
 metadata:
   name: gateway-multicluster
 spec:
-  version: "1.6.7"
+  version: "1.7.0-beta.1"
   autoInjectionNamespaces:
   - "default"
   meshPolicy:
