--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -499,6 +499,14 @@ spec:
             istiod:
               description: Istiod configuration
               properties:
+                enableAnalysis:
+                  description: If enabled, pilot will run Istio analyzers and write
+                    analysis errors to the Status field of any Istio Resources
+                  type: boolean
+                enableStatus:
+                  description: If enabled, pilot will update the CRD Status field
+                    of all Istio resources with reconciliation status
+                  type: boolean
                 enabled:
                   type: boolean
                 multiClusterSupport:
