--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -27,6 +27,8 @@ spec:
     enabled: true
   istiod:
     enabled: true
+    enableAnalysis: true
+    enableStatus: true
   pilot:
     enabled: true
     image: "docker.io/istio/pilot:1.6.8"
@@ -39,11 +41,6 @@ spec:
         cpu: 500m
         memory: 2048Mi
     certProvider: "istiod"
-    additionalEnvVars:
-      - name: PILOT_ENABLE_STATUS
-        value: "true"
-      - name: PILOT_ENABLE_ANALYSIS
-        value: "true"
   gateways:
     enabled: true
     ingress:
