--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -52,7 +52,7 @@ spec:
       loadBalancerIP: ""
       serviceAnnotations: {}
       serviceLabels: {}
-      runAsRoot: true
+      runAsRoot: false
       ports:
         - port: 15021
           targetPort: 15021
@@ -81,7 +81,7 @@ spec:
       serviceType: "ClusterIP"
       serviceAnnotations: {}
       serviceLabels: {}
-      runAsRoot: true
+      runAsRoot: false
       ports:
         - port: 80
           targetPort: 8080
