Implement istiocoredns resource changes

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -477,6 +477,14 @@ spec:
                   type: boolean
                 image:
                   type: string
+                maxReplicas:
+                  format: int32
+                  minimum: 0
+                  type: integer
+                minReplicas:
+                  format: int32
+                  minimum: 0
+                  type: integer
                 nodeSelector:
                   type: object
                 pluginImage:
