Make proxy.HoldApplicationUntilProxyStarts configurable

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -995,6 +995,11 @@ spec:
                       format: int32
                       type: integer
                   type: object
+                holdApplicationUntilProxyStarts:
+                  description: Controls if sidecar is injected at the front of the
+                    container list and blocks the start of the other containers until
+                    the proxy is ready
+                  type: boolean
                 image:
                   type: string
                 lifecycle:
