--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -115,6 +115,7 @@ spec:
     accessLogFormat: ""
     accessLogEncoding: "TEXT"
     enableCoreDump: false
+    holdApplicationUntilProxyStarts: false
     resources:
       requests:
         cpu: 100m
