Make proxy.HoldApplicationUntilProxyStarts configurable

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -131,6 +131,7 @@ spec:
     accessLogFormat: ""
     accessLogEncoding: "TEXT"
     enableCoreDump: false
+    holdApplicationUntilProxyStarts: false
     resources:
       requests:
         cpu: 100m
