--- a/pkg/manifests/istio-crds/assets/crd-all.gen.yaml
+++ b/pkg/manifests/istio-crds/assets/crd-all.gen.yaml
@@ -1093,6 +1093,9 @@ spec:
                                                                     description: REQUIRED if mode is `MUTUAL`.
                                                                     format: string
                                                                     type: string
+                                                                credentialName:
+                                                                  format: string
+                                                                  type: string
                                                                 mode:
                                                                     enum:
                                                                         - DISABLE
@@ -1128,6 +1131,9 @@ spec:
                                                         description: REQUIRED if mode is `MUTUAL`.
                                                         format: string
                                                         type: string
+                                                    credentialName:
+                                                      format: string
+                                                      type: string
                                                     mode:
                                                         enum:
                                                             - DISABLE
@@ -1618,6 +1624,9 @@ spec:
                                                         description: REQUIRED if mode is `MUTUAL`.
                                                         format: string
                                                         type: string
+                                                    credentialName:
+                                                      format: string
+                                                      type: string
                                                     mode:
                                                         enum:
                                                             - DISABLE
@@ -1653,6 +1662,9 @@ spec:
                                             description: REQUIRED if mode is `MUTUAL`.
                                             format: string
                                             type: string
+                                        credentialName:
+                                          format: string
+                                          type: string
                                         mode:
                                             enum:
                                                 - DISABLE
@@ -1982,6 +1994,11 @@ spec:
                                             format: string
                                             type: string
                                         type: array
+                                    name:
+                                      description: An optional name of the server, when set must be
+                                        unique across all servers.
+                                      format: string
+                                      type: string
                                     port:
                                         properties:
                                             name:
@@ -2405,6 +2422,9 @@ spec:
                                                 description: REQUIRED if mode is `MUTUAL`.
                                                 format: string
                                                 type: string
+                                            credentialName:
+                                              format: string
+                                              type: string
                                             mode:
                                                 enum:
                                                     - DISABLE
@@ -2455,6 +2475,9 @@ spec:
                                             description: REQUIRED if mode is `MUTUAL`.
                                             format: string
                                             type: string
+                                        credentialName:
+                                          format: string
+                                          type: string
                                         mode:
                                             enum:
                                                 - DISABLE
