--- a/config/samples/istio_v1beta1_istio_cni_gke.yaml
+++ b/config/samples/istio_v1beta1_istio_cni_gke.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.7.0-beta.2"
+  version: "1.7.0-rc.1"
   meshPolicy:
     mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
@@ -28,5 +28,5 @@ spec:
         brokenPodLabelKey: "cni.istio.io/uninitialized"
         brokenPodLabelValue: "true"
   proxy:
-    image: "docker.io/istio/proxyv2:1.7.0-beta.2"
+    image: "docker.io/istio/proxyv2:1.7.0-rc.1"
   jwtPolicy: "first-party-jwt"
