--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -214,7 +214,7 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - networking.x.k8s.io
+  - networking.x-k8s.io
   resources:
   - '*'
   verbs:
@@ -256,7 +256,6 @@ rules:
   - config.istio.io
   - istio.istio.io
   - networking.istio.io
-  - rbac.istio.io
   - security.istio.io
   - scalingpolicy.istio.io
   resources:
