Add leader election config map option
This causes the different operators to not to conflict and ensures that
they can operate in parallel.

--- a/deploy/charts/istio-operator/templates/operator-statefulset.yaml
+++ b/deploy/charts/istio-operator/templates/operator-statefulset.yaml
@@ -60,6 +60,7 @@ spec:
           - "--metrics-addr=127.0.0.1:8080"
           {{- end }}
           - "--watch-created-resources-events=true"
+          - "--leader-election-name={{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}-leader"
         env:
           - name: POD_NAMESPACE
             valueFrom:
