--- a/config/samples/istio_v1beta1_istio_minimal.yaml
+++ b/config/samples/istio_v1beta1_istio_minimal.yaml
@@ -7,7 +7,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.7.0-rc.2"
+  version: "1.7.0"
   meshPolicy:
     mtlsMode: PERMISSIVE
   autoInjectionNamespaces:
@@ -31,5 +31,5 @@ spec:
   tracing:
     enabled: false
   proxy:
-    image: "docker.io/istio/proxyv2:1.7.0-rc.2"
+    image: "docker.io/istio/proxyv2:1.7.0"
   jwtPolicy: "first-party-jwt"
