Make externalTrafficPolicy configurable for gateway services

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -322,6 +322,11 @@ spec:
                       type: object
                     serviceAnnotations:
                       type: object
+                    serviceExternalTrafficPolicy:
+                      enum:
+                      - Local
+                      - Cluster
+                      type: string
                     serviceLabels:
                       type: object
                     serviceType:
@@ -428,6 +433,11 @@ spec:
                       type: object
                     serviceAnnotations:
                       type: object
+                    serviceExternalTrafficPolicy:
+                      enum:
+                      - Local
+                      - Cluster
+                      type: string
                     serviceLabels:
                       type: object
                     serviceType:
