--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -149,6 +149,11 @@ spec:
               type: object
             serviceAnnotations:
               type: object
+            serviceExternalTrafficPolicy:
+              enum:
+              - Local
+              - Cluster
+              type: string
             serviceLabels:
               type: object
             serviceType:
