--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -48,6 +48,7 @@ spec:
       loadBalancerIP: ""
       serviceAnnotations: {}
       serviceLabels: {}
+      serviceExternalTrafficPolicy: "Cluster"
       runAsRoot: false
       ports:
         - port: 15021
