--- a/config/samples/istio_v1beta1_meshgateway.yaml
+++ b/config/samples/istio_v1beta1_meshgateway.yaml
@@ -13,6 +13,7 @@ spec:
   loadBalancerIP: ""
   serviceAnnotations: {}
   serviceLabels: {}
+  serviceExternalTrafficPolicy: "Cluster"
   runAsRoot: false
   ports:
     - port: 15021
