Add chart changes

--- a/deploy/charts/istio-operator/templates/meshgateway-crd-1.7.yaml
+++ b/deploy/charts/istio-operator/templates/meshgateway-crd-1.7.yaml
@@ -156,6 +156,11 @@ spec:
               type: object
             serviceAnnotations:
               type: object
+            serviceExternalTrafficPolicy:
+              enum:
+              - Local
+              - Cluster
+              type: string
             serviceLabels:
               type: object
             serviceType:
