--- a/deploy/charts/istio-operator/templates/operator-istio-1.7-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.7-crd.yaml
@@ -328,6 +328,11 @@ spec:
                       type: object
                     serviceAnnotations:
                       type: object
+                    serviceExternalTrafficPolicy:
+                      enum:
+                      - Local
+                      - Cluster
+                      type: string
                     serviceLabels:
                       type: object
                     serviceType:
@@ -434,6 +439,11 @@ spec:
                       type: object
                     serviceAnnotations:
                       type: object
+                    serviceExternalTrafficPolicy:
+                      enum:
+                      - Local
+                      - Cluster
+                      type: string
                     serviceLabels:
                       type: object
                     serviceType:
