Adapt to CRD changes

--- a/pkg/manifests/istio-crds/assets/crd-all.gen.yaml
+++ b/pkg/manifests/istio-crds/assets/crd-all.gen.yaml
@@ -4365,6 +4365,7 @@ spec:
                             enum:
                                 - ALLOW
                                 - DENY
+                                - AUDIT
                             type: string
                         rules:
                             description: Optional.
