--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -48,12 +48,12 @@ spec:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -94,11 +94,20 @@ spec:
             ports:
               items:
                 properties:
+                  appProtocol:
+                    description: The application protocol for this port. This field
+                      follows standard Kubernetes label syntax. Un-prefixed names
+                      are reserved for IANA standard service names (as per RFC-6335
+                      and http://www.iana.org/assignments/service-names). Non-standard
+                      protocols should use prefixed names such as mycompany.com/my-custom-protocol.
+                      Field can be enabled with ServiceAppProtocol feature gate.
+                    type: string
                   name:
                     description: The name of this port within the service. This must
                       be a DNS_LABEL. All ports within a ServiceSpec must have unique
-                      names. This maps to the 'Name' field in EndpointPort objects.
-                      Optional if only one ServicePort is defined on this service.
+                      names. When considering the endpoints for a Service, this must
+                      match the 'name' field in the EndpointPort. Optional if only
+                      one ServicePort is defined on this service.
                     type: string
                   nodePort:
                     description: 'The port on each node on which this service is exposed
