--- a/config/base/rbac/rbac_role.yaml
+++ b/config/base/rbac/rbac_role.yaml
@@ -324,6 +324,7 @@ rules:
   - admissionregistration.k8s.io
   resources:
   - validatingwebhookconfigurations
+  - mutatingwebhookconfigurations
   verbs:
   - '*'
 - apiGroups:
