fix AccessLogFile validation

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -4206,7 +4206,7 @@ spec:
                     type: string
                   accessLogFile:
                     enum:
-                    - ;/dev/stdout
+                    - /dev/stdout
                     type: string
                   accessLogFormat:
                     type: string
