--- a/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -566,7 +566,7 @@ spec:
                     type: string
                   accessLogFile:
                     enum:
-                    - ;/dev/stdout
+                    - /dev/stdout
                     type: string
                   accessLogFormat:
                     type: string
