fix operator webhook configuration

--- a/deploy/charts/istio-operator/templates/operator-statefulset.yaml
+++ b/deploy/charts/istio-operator/templates/operator-statefulset.yaml
@@ -70,7 +70,7 @@ spec:
           - "--leader-election-namespace={{ .Values.leaderElection.namespace }}"
           {{- end }}
           {{- if and (.Values.webhook.enabled) (eq .Values.istioVersion "1.7") }}
-          - "--webhook-name={{ include "istio-operator.name" . }}-webhook"
+          - "--webhook-name={{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}-webhook"
           {{- end }}
           {{- range $value := .Values.operator.extraArgs }}
           - {{ quote $value }}
