fix kubebuilder rbac generation

--- a/config/base/rbac/role.yaml
+++ b/config/base/rbac/role.yaml
@@ -71,6 +71,18 @@ rules:
 - apiGroups:
   - apps
   resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - apps
+  resources:
   - deployments/status
   verbs:
   - get
@@ -202,6 +214,48 @@ rules:
   - istio.banzaicloud.io
   resources:
   - istios/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - meshgateways
+  - meshgateways/finalizers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - meshgateways/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - remoteistios
+  - remoteistios/finalizers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - istio.banzaicloud.io
+  resources:
+  - remoteistios/status
   verbs:
   - get
   - patch
