--- a/deploy/charts/istio-operator/templates/operator-statefulset.yaml
+++ b/deploy/charts/istio-operator/templates/operator-statefulset.yaml
@@ -69,7 +69,7 @@ spec:
           {{- end }}
           - "--leader-election-namespace={{ .Values.leaderElection.namespace }}"
           {{- end }}
-          {{- if and (.Values.webhook.enabled) (eq .Values.istioVersion "1.7") }}
+          {{- if and (.Values.webhook.enabled) (semverCompare ">= 1.7.0" .Values.istioVersion) }}
           - "--webhook-name={{ include "istio-operator.fullname" . }}{{ .Values.operatorComponentSuffix }}-webhook"
           {{- end }}
           {{- range $value := .Values.operator.extraArgs }}
