--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -4,8 +4,8 @@
 
 operator:
   image:
-    repository: banzaicloud/istio-operator
-    tag: 0.7.6
+    repository: ghcr.io/banzaicloud/istio-operator
+    tag: 0.7.7
     pullPolicy: IfNotPresent
   extraArgs: []
   resources:
