add support for custom global domain

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -2018,6 +2018,8 @@ spec:
                 type: object
               global:
                 type: boolean
+              globalDomain:
+                type: string
               httpProxyEnvs:
                 properties:
                   httpProxy:
